; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_srq.c_mlx5_init_srq_table.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_srq.c_mlx5_init_srq_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mlx5_srq_table }
%struct.mlx5_srq_table = type { i32, i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5_init_srq_table(%struct.mlx5_core_dev* %0) #0 {
  %2 = alloca %struct.mlx5_core_dev*, align 8
  %3 = alloca %struct.mlx5_srq_table*, align 8
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %2, align 8
  %4 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %2, align 8
  %5 = getelementptr inbounds %struct.mlx5_core_dev, %struct.mlx5_core_dev* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store %struct.mlx5_srq_table* %6, %struct.mlx5_srq_table** %3, align 8
  %7 = load %struct.mlx5_srq_table*, %struct.mlx5_srq_table** %3, align 8
  %8 = call i32 @memset(%struct.mlx5_srq_table* %7, i32 0, i32 8)
  %9 = load %struct.mlx5_srq_table*, %struct.mlx5_srq_table** %3, align 8
  %10 = getelementptr inbounds %struct.mlx5_srq_table, %struct.mlx5_srq_table* %9, i32 0, i32 1
  %11 = call i32 @spin_lock_init(i32* %10)
  %12 = load %struct.mlx5_srq_table*, %struct.mlx5_srq_table** %3, align 8
  %13 = getelementptr inbounds %struct.mlx5_srq_table, %struct.mlx5_srq_table* %12, i32 0, i32 0
  %14 = load i32, i32* @GFP_ATOMIC, align 4
  %15 = call i32 @INIT_RADIX_TREE(i32* %13, i32 %14)
  ret void
}

declare dso_local i32 @memset(%struct.mlx5_srq_table*, i32, i32) #1

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @INIT_RADIX_TREE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
